Fixing blinking cursor color for dark mode

--- a/src/client/components/hero/hero.less
+++ b/src/client/components/hero/hero.less
@@ -56,7 +56,7 @@
     }
   }
 
-  .dark {
+  &.dark {
     .typewriter {
       h1 {
         animation: typing 1s 1.75s steps(9, end) forwards, darkBlinkCursor 1s step-end infinite;
